--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "web": "cd web && webpack-dev-server",
+    "web": "cd web && yarn dev",
     "build:web": "cd web && webpack",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -21,12 +21,6 @@
     "@babel/core": "^7.15.5",
     "@babel/runtime": "^7.15.4",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@storybook/addon-actions": "^5.3",
-    "@storybook/addon-knobs": "^5.3",
-    "@storybook/addon-links": "^5.3",
-    "@storybook/addon-ondevice-actions": "^5.3.23",
-    "@storybook/addon-ondevice-knobs": "^5.3.25",
-    "@storybook/react-native": "^5.3.25",
     "@types/react": "^17.0.20",
     "@types/react-native": "^0.65.0",
     "babel-jest": "^27.1.1",
