--- a/web/package.json
+++ b/web/package.json
@@ -58,6 +58,8 @@
     "react-dom": "^17.0.2",
     "react-focus-lock": "^2.5.0",
     "react-live": "^2.2.3",
+    "react-native-dropdown-picker": "^5.1.28",
+    "react-native-select-dropdown": "^1.2.0",
     "react-native-web": "^0.17.1",
     "react-native-web-async-storage": "^0.1.1",
     "react-native-web-linear-gradient": "^1.1.1",
@@ -70,6 +72,7 @@
     "rimraf": "^3.0.2",
     "svgs": "^4.1.1",
     "ts-loader": "8.3.0",
+    "tslib": "^2.3.1",
     "valid-url": "^1.0.9",
     "yup": "^0.29.1"
   },
